Litigator: Fees alignment fixes + uploaded date
https://www.pivotaltracker.com/story/show/126021365
https://www.pivotaltracker.com/story/show/126795629

--- a/app/assets/stylesheets/moj/_forms.scss
+++ b/app/assets/stylesheets/moj/_forms.scss
@@ -15,6 +15,8 @@ form {
   }
 }
 
+
+
 .dz-error-message{
   color: $error-colour;
 }
@@ -158,9 +160,7 @@ select.form-control {
   .expense-cost{
     display:none;
   }
-  .expense-group{
-    // border: 1px solid red;
-  }
+
   .column-one-third{
     padding:0;
     width: 40%;
@@ -180,7 +180,8 @@ select.form-control {
   }
   .expense-distance,
   .expense-hours,
-  .js-expense-amount{
+  .js-expense-amount,
+  .vat_amount_wrapper{
     text-align: right;
     input.form-control[type=text],
     input.form-control[type=email],
@@ -198,7 +199,11 @@ select.form-control {
   }
 
   .js-expense-reason-text,
-  .js-expense-location{
+  .js-expense-location,
+  .js-expense-distance{
+    .form-group{
+      margin-bottom: 0;
+    }
     input{
       width: 90%;
     }
@@ -260,6 +265,12 @@ select.form-control {
     }
   }
 
+  .margin-spacer-lg{
+    margin-top: 60px;
+  }
+  .margin-spacer-sm{
+    margin-top: 30px;
+  }
   .js-interim-feeTotal{
     .amount_wrapper{
       margin-top: 60px;
@@ -596,4 +607,14 @@ label.form-date-spacing {
   background-color: #F7F7F7;
   padding: 10px;
   margin-bottom: 20px;
+}
+
+
+#warrant_fee{
+  .warrant-amount{
+    text-align: right;
+    .column-quarter{
+      float: right;
+    }
+  }
 }
